<resources>
    <string name="app_name">Currency Exchanger</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mock_currency_name">USD</string>
    <string name="you_have">You have: %1$s %2$s</string>
    <string name="currency_rate">%1$s1 = %2$s%3$f </string>
    <string name="value_hint">0.00</string>
    <string name="exchange">Exchange</string>
    <string name="description_arrow_bot">This is an image of arrow downward</string>
    <string name="error_no_data">Something went wrong, failed to get data</string>
    <string name="usd_symbol">$</string>
    <string name="eur_symbol">€</string>
    <string name="gbp_symbol">£</string>
    <string name="not_enough_money">Not enough money to complete the transaction</string>
    <string name="not_possible">It`s not possible to make transaction, please try later</string>
    <string name="nothing_to_exchange">There is nothing to exchange</string>
    <string name="impossible_to_make_transaction_same">Cannot make a transaction on the same account</string>
    <string name="receipt">Receipt</string>
    <string name="ok">OK</string>

    <string name="prefix_text_income">+</string>
    <string name="prefix_text_expense">-</string>

</resources>